@@ -8,6 +8,7 @@ Revision history for File-Serialize
  [DOCUMENTATION]
 
  [ENHANCEMENTS]
+ - adding 'add_extension'.
 
  [NEW FEATURES]
 
